# spectral

./: .gitignore  README.md  RELEASE-MANIFEST.json  pyproject.toml
firmware/sdk/: .gitignore  BUILD-MANIFEST.json  CMakeLists.txt  HARDWARE-VALIDATION.json  README.md
firmware/sdk/cmake/: arm-none-eabi-gcc.cmake
firmware/sdk/coordinator_h743/: README.md
firmware/sdk/coordinator_h743/include/: aginti_coordinator.h  coordinator_board.h  stm32h7xx_hal_conf.h
firmware/sdk/coordinator_h743/src/: coordinator.c  coordinator_board.c  main.c
firmware/sdk/docs/: architecture.md  c12880-complete-backup-and-recovery.md  dual-h7-control.md  firmware-variants-and-release-tags.md  performance-firmware-first-flash-20260722.md  protocol-v2.md
firmware/sdk/include/aginti/: c12880.h  c12880_protocol.h
firmware/sdk/python/: .gitignore  pyproject.toml
firmware/sdk/python/aginti_c12880/: __init__.py  cli.py  client.py  protocol.py
firmware/sdk/reconstruction_h743/: README.md
firmware/sdk/reconstruction_h743/src/: main.c
firmware/sdk/src/: c12880.c  c12880_protocol.c
firmware/sdk/stm32h7/include/: c12880_board.h  c12880_usb.h  stm32h7xx_hal_conf.h  usbd_conf.h  usbd_desc.h
firmware/sdk/stm32h7/linker/: STM32H743II_FLASH.ld
firmware/sdk/stm32h7/src/: c12880_board.c  c12880_usb.c  main.c  stm32h7xx_it.c  syscalls.c  usbd_conf.c  usbd_desc.c
firmware/sdk/tools/: coordinator_cli.py  optimize_dual_lamp_lut.py
publications/c12880_firmware_sdk/: c12880_firmware_sdk_cn.tex
references/: c12880-clean-room-firmware.md  c12880-firmware-backup-manifest.json  c12880-firmware-readonly-analysis.md  hardware-diagnostic-2026-07-18.md  protocol.md  vendor-recovery.md  vendor-source-comparison.md  wavelength-rendering-and-fps-limits.md
scripts/: analyze_c12880_firmware.py  backup_c12880_complete.ps1  backup_c12880_firmware.ps1  backup_c12880_legacy_eeprom.py  build_c12880_firmware.ps1  build_c12880_firmware_suite.ps1  build_dual_h7_coordinator.ps1  build_windows_icon.py  fetch_c12880_firmware_deps.ps1  install_windows_shortcuts.ps1  probe.ps1  recover_vendor_source.ps1  run.ps1  verify_c12880_backup.ps1
src/spectral/: __init__.py  __main__.py  calibration.py  control_api.py  device.py  gui.py  plotting.py  protocol.py  recording.py
src/spectral/resources/: calibration.json  pixel_correction.json  vendor_sample.csv
src/spectral/web/: app.js  index.html  styles.css
tools/: import_vendor_package.py
