[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aginti-spectrum-studio"
version = "0.1.0"
description = "High-rate C12880MA acquisition, diagnostics, recording, and spectral visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pyqtgraph>=0.13.7",
  "pyserial>=3.5",
  "PySide6>=6.8",
]

[project.optional-dependencies]
vendor = ["xlrd>=2.0.1"]

[project.scripts]
spectrum-studio = "spectral.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectral = ["resources/*.csv", "resources/*.json"]

